[package]
name = "httpot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }

structopt = "0.3"
anyhow = "1.0"

log = "0.4"
pretty_env_logger = "0.4"
url = "2"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[lib]
path = "src/lib/lib.rs"