[package]
name = "httpot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }

structopt = "0.3"
anyhow = "1.0"

log = "0.4"
pretty_env_logger = "0.4"

url = "2"
# typed-html = "0.2" recursion limit error
typed-html = { git = "https://github.com/bodil/typed-html", branch = "master" }
derive_builder = "0.12"

rand = "0.8"
chrono = "0.4"

num = "0.4"
num-traits = "0.2"
num-derive = "0.3"

regex = "1"
lazy_static = "1.4"

prometheus = "0.13"
prometheus-static-metric = "0.5"

[lib]
path = "src/lib/lib.rs"